# cosmo-numba

./: LICENSE  README.md  pyproject.toml  requirements.txt
cosmo_numba/: angular_cl.py  fftlog.py
cosmo_numba/B_modes/: cosebis.py  cosebis_nb.py  schneider2022.py
cosmo_numba/kernels/: lensing_kernel.py
cosmo_numba/math/: interpolate_1D.py  interpolate_2D.py  utils.py
cosmo_numba/math/integrate/: quad.py  simpson.py
cosmo_numba/math/interpolate/: interpolate_1D.py  interpolate_2D.py
notebooks/: compute_B_modes.ipynb  cosebis.ipynb
